<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/corner"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/etTodoText"
        android:hint="@string/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Spinner
        android:paddingTop="10dp"

        android:paddingBottom="10dp"
        android:id="@+id/spinnerCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/etTodoPrice"
        android:inputType="number"
        android:hint="@string/estimated_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/etTodoDesc"
        android:hint="@string/item_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <CheckBox
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/cbTodoDone"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchased"/>

</LinearLayout>