<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/todoCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="#fff6a0"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:padding="10dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.075" />

        <TextView
            android:id="@+id/tvTodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/todo2"
            android:textSize="24sp"
            card_view:layout_constraintStart_toEndOf="@+id/ivIcon"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/price"
            android:textSize="20sp"
            card_view:layout_constraintStart_toEndOf="@+id/ivIcon"
            card_view:layout_constraintTop_toBottomOf="@+id/tvTodo" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/desc"
            android:textSize="15sp"
            card_view:layout_constraintStart_toEndOf="@+id/ivIcon"
            card_view:layout_constraintTop_toBottomOf="@+id/tvPrice" />

        <CheckBox
            android:id="@+id/cbDone"
            android:layout_width="131dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/todo3"

            card_view:layout_constraintBottom_toBottomOf="@+id/btnEdit"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/ivIcon"
            card_view:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="78dp"
            android:layout_height="51dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/delete"
            card_view:layout_constraintBottom_toBottomOf="@+id/ivIcon"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.125" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_item_details"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.969"
            card_view:layout_constraintStart_toEndOf="@+id/cbDone"
            card_view:layout_constraintTop_toBottomOf="@+id/tvDesc"
            card_view:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>